# juniper-mpls-l3vpn-demo

./: README.md  mkdocs.yml  pyproject.toml  tasks.py
files/: .flake8  .yamllint
files/docker/: Dockerfile  requirements.txt
files/python/: configure.py  download.py  generate.py  inventory.yaml  rollback.py  validate.py
files/python/configurations/downloaded/set/: ce1.conf  ce2.conf  p1.conf  p2.conf  pe1.conf  pe2.conf  pe3.conf  pe4.conf
files/python/configurations/downloaded/text/: ce1.conf  ce2.conf  p1.conf  p2.conf  pe1.conf  pe2.conf  pe3.conf  pe4.conf
files/python/configurations/jti/: certs.sh  config.json  jti.conf  kafka.json
files/python/templates/: chassis.j2  interfaces.j2  junos.j2  policy_options.j2  protocols.j2  routing_instances.j2  routing_options.j2  system.j2
files/python/tests/: test_l3vpn_routes.yaml
files/python/vars/: ce1.yaml  ce2.yaml  p1.yaml  p2.yaml  pe1.yaml  pe2.yaml  pe3.yaml  pe4.yaml
files/shell/: download.sh  update_management_ip.sh  upload.sh
